docs(build): mark Android build blocker resolved with successful assemble

--- a/qa/blockers-2026-02-12.md
+++ b/qa/blockers-2026-02-12.md
@@ -1,24 +1,24 @@
 # Blockers Log — 2026-02-12
 
-## Current blocker
-- Missing system `gradle` binary on build host.
+## Resolved blocker
+- Initial blocker: missing system `gradle` binary on build host.
+- Status: ✅ Resolved.
 
-## Verification evidence
-Command:
+## Resolution evidence
+Commands executed:
 ```bash
 cd android-app
-gradle -v
+./bootstrap.sh
+./gradlew assembleDebug
 ```
+
 Result:
 ```text
-bash: gradle: command not found
+BUILD SUCCESSFUL
 ```
 
-## Impact
-- Cannot generate Gradle wrapper (`gradle wrapper --gradle-version 8.7`)
-- Cannot run first `./gradlew assembleDebug`
-
-## Unblocked path
-1. Install Gradle (or use Android Studio embedded Gradle)
-2. Run `make bootstrap`
-3. Commit generated wrapper + first successful build note
+## Outcome
+- Gradle wrapper generated and committed.
+- First successful debug build completed.
+- APK output available at:
+  - `android-app/app/build/outputs/apk/debug/app-debug.apk`
